--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://Artyom1910.gigthub.io/IceCream-project",
+  "homepage": "https://Artyom1910.github.io/IceCream-project",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html",
